# AI-Learners-Journal-Kit-v3

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  OPTIONAL_READING_command-line.md  PRIVACY.md  README.md  README.txt  REFUND_POLICY.md  SECURITY.md  START HERE - AI Journal.bat  START HERE - AI Journal.command  START_HERE.md  SUPPORT.md  Start AI Journal (Web).bat  Start AI Journal (Web).command  Start AI Journal.bat  Start AI Journal.command  ai-journal  pyproject.toml  requirements-dev.txt
.github/: markdown-link-check-config.json  markdownlint-config.yaml
demo/: usage-examples.md
docs/: MODERNIZATION.md  Paid_Product_Checklist.md  Quick_Start.md  Quick_Start_v2_backup.md  Quick_Start_v3.md  Release_Checklist.md  Release_Notes_v3.0.1.md  Release_Notes_v3.3.0.md  Storefront_Copy_Template.md  Storefront_Distribution_Checklist.md  Workshop_Facilitator_Guide.md
growth/: KICKOFF_PROMPTS.md  channel-plan.md  demand-brief-review.md  demand-brief.md  experiment-4-tutorial-plan.md  meeting-prep-kemausuor-2026-07-20.md  offer-spec.md  pending-corrections.md
installers/: Installer.bat  Installer.command  install_ai_journal_v3.sh
promo/: blog-post-draft.md
scripts/: ai_integration.py  auto_append.py  build_release.py  ci-local.sh  entry_saver.py  generate_ghana_launch_assets.py  journal_cli.py  modern_tools.py  session_import.py  sqlite_index.py  verify_customer_package.py  verify_providers.py  web_server.py
tests/: test_cli.py  test_sqlite_index.py  test_web_server.py
visuals/: poster.html
(+30 files in other folders)
