[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learners-journal"
version = "3.1.0"
description = "A local-first learning journal with a beginner menu, browser UI, and optional AI assistance."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Lawrence Agbemabiese" }]
keywords = ["learning", "journal", "markdown", "education", "ai"]
dependencies = []

[project.optional-dependencies]
ai = ["openai>=1.0"]
terminal = ["rich>=13.9", "typer>=0.15"]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[project.scripts]
ai-journal = "journal_cli:main"

[tool.setuptools]
py-modules = [
  "ai_integration",
  "auto_append",
  "entry_saver",
  "journal_cli",
  "modern_tools",
  "sqlite_index",
  "web_server",
]
package-dir = { "" = "scripts" }

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["output", "marketing", "promo", "visuals"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["scripts"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
warn_unused_ignores = true
exclude = "^(output|marketing|promo|visuals)/"

[tool.isort]
profile = "black"
line_length = 88
